--- a/index.html
+++ b/index.html
@@ -5,147 +5,195 @@
   <meta name="description" content="Personal website for Shenggang Ding" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shenggang Ding</title>
-  
-  <!-- Google Fonts -->
+
+  <!-- Google Fonts: Inter + Merriweather for headlines -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:wght@700&display=swap"
     rel="stylesheet"
   />
-  
+
   <style>
-    /* Global Styles */
+    /* --- Global Resets & Styles --- */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Inter", sans-serif;
     }
-
     body {
+      font-family: "Inter", sans-serif;
       background-color: #fdfdfd;
       color: #333;
-      line-height: 1.6;
+      line-height: 1.5;
     }
-
     a {
-      color: #007bff;
+      color: #2c689c;
       text-decoration: none;
+      transition: color 0.3s ease;
     }
     a:hover {
-      text-decoration: underline;
+      color: #1d4f75;
     }
 
-    /* Header */
+    /* --- Header Section --- */
     header {
-      background-color: #fefefe;
-      padding: 1.5rem;
-      border-bottom: 1px solid #e0e0e0;
+      background: linear-gradient(135deg, #ebf8ff 0%, #e1ebfc 100%);
+      padding: 2rem 1rem;
+      border-bottom: 1px solid #ddd;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
     .header-container {
       max-width: 1200px;
       margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
     }
     .name {
-      font-size: 2rem;
+      font-family: "Merriweather", serif;
+      font-size: 2.5rem;
       font-weight: 700;
-      color: #111;
+      color: #333;
+      margin-bottom: 0.5rem;
     }
     .contact-info {
       font-size: 0.95rem;
       color: #555;
+      margin-bottom: 1.5rem;
     }
 
-    /* Navigation (optional) */
-    nav {
-      margin-top: 1rem;
-    }
+    /* --- Navigation --- */
     nav ul {
       list-style: none;
       display: flex;
-      gap: 1rem;
+      flex-wrap: wrap;
+      gap: 1.5rem;
     }
     nav li {
-      cursor: pointer;
+      font-weight: 500;
+      font-size: 0.95rem;
     }
 
-    /* Sections */
+    /* --- Section Layout --- */
     section {
-      max-width: 1200px;
+      max-width: 1000px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
     section h2 {
-      margin-bottom: 1rem;
-      font-size: 1.6rem;
-      font-weight: 600;
-      border-bottom: 2px solid #ddd;
-      display: inline-block;
-      padding-bottom: 0.5rem;
+      font-family: "Merriweather", serif;
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: #333;
+      margin-bottom: 1.2rem;
+      position: relative;
     }
+    section h2::after {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 3px;
+      background-color: #2c689c;
+      margin-top: 8px;
+    }
+
+    /* --- Highlights Text --- */
     .highlight-text {
       margin: 1rem 0;
       text-align: justify;
       line-height: 1.7;
     }
+    .highlight-text p {
+      margin-bottom: 1rem;
+    }
 
-    /* Skills Section */
+    /* --- Skills Section --- */
     .skills-list {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      grid-template-columns: 1fr;
       gap: 1rem;
     }
     .skills-list li {
       margin-left: 1.5rem;
       list-style-type: disc;
+      margin-bottom: 0.5rem;
+    }
+    @media (min-width: 768px) {
+      .skills-list {
+        grid-template-columns: 1fr 1fr;
+      }
     }
 
-    /* Education & Experience */
+    /* --- Timeline (Education & Experience) --- */
     .timeline {
       margin-top: 1rem;
     }
     .timeline-item {
-      margin-bottom: 2rem;
+      background-color: #ffffff;
+      border: 1px solid #eee;
+      border-radius: 5px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s ease;
+    }
+    .timeline-item:hover {
+      transform: translateY(-2px);
     }
     .timeline-item h3 {
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       font-weight: 600;
-      color: #222;
+      margin-bottom: 0.5rem;
+      color: #333;
     }
-    .timeline-item .position {
-      color: #444;
+    .position {
+      color: #555;
       font-size: 0.95rem;
       margin-bottom: 0.3rem;
     }
-    .timeline-item .date-location {
+    .date-location {
       font-size: 0.85rem;
-      color: #777;
-      margin-bottom: 0.5rem;
+      color: #888;
+      margin-bottom: 0.7rem;
     }
     .timeline-item ul {
+      list-style-type: disc;
       margin-left: 1.5rem;
-      list-style: disc;
+      color: #444;
+    }
+    .timeline-item li {
+      margin-bottom: 0.5rem;
     }
 
-    /* Footer */
+    /* --- Achievements List --- */
+    #achievements ul {
+      list-style-type: disc;
+      margin-left: 1.5rem;
+      color: #444;
+      margin-top: 1rem;
+    }
+    #achievements li {
+      margin-bottom: 0.5rem;
+    }
+
+    /* --- Footer --- */
     footer {
-      background-color: #fefefe;
-      border-top: 1px solid #e0e0e0;
+      background: #fafafa;
+      border-top: 1px solid #ddd;
       padding: 1.5rem 1rem;
       text-align: center;
       font-size: 0.9rem;
-      color: #666;
+      color: #777;
+      position: relative;
+      margin-top: 2rem;
     }
     footer a {
-      color: #666;
+      color: #2c689c;
     }
     footer a:hover {
+      color: #1d4f75;
       text-decoration: none;
-      color: #333;
+    }
+    #year {
+      font-weight: 500;
     }
   </style>
 </head>
@@ -157,10 +205,10 @@
       <div class="contact-info">
         1230 W 36th Street, Los Angeles, CA | 213-913-0327 |
         <a href="mailto:shenggan@usc.edu">shenggan@usc.edu</a> |
-        <a href="https://www.linkedin.com/in/shenggang-ding/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/shenggang-ding/" target="_blank"
+          >LinkedIn</a
+        >
       </div>
-
-      <!-- Optional: Simple Navigation (links scroll to sections) -->
       <nav>
         <ul>
           <li><a href="#highlights">Highlights</a></li>
@@ -201,10 +249,16 @@
     <h2>Skills</h2>
     <div class="skills-list">
       <ul>
-        <li><strong>Programming Languages:</strong> Python (Numpy, Pandas, TensorFlow, PyTorch, Matplotlib, Scikit-Learn), C++, Java, JavaScript, HTML/CSS, SQL (MySQL), MongoDB, Matlab</li>
+        <li>
+          <strong>Programming Languages:</strong> Python (Numpy, Pandas, TensorFlow, PyTorch, Matplotlib, Scikit-Learn), 
+          C++, Java, JavaScript, HTML/CSS, SQL (MySQL), MongoDB, Matlab
+        </li>
       </ul>
       <ul>
-        <li><strong>Technical:</strong> Machine Learning Models (Linear Regression, Logistic Regression, K-Means, Random Forests, KNN, RNN, GRU, LSTM), Cross Validation, Data Analytics, Quantitative Analysis</li>
+        <li>
+          <strong>Technical:</strong> Machine Learning Models (Linear Regression, Logistic Regression, 
+          K-Means, Random Forests, KNN, RNN, GRU, LSTM), Cross Validation, Data Analytics, Quantitative Analysis
+        </li>
       </ul>
     </div>
   </section>
@@ -219,17 +273,25 @@
         <div class="date-location">August 2023 – May 2027</div>
         <ul>
           <li>Major in Computer Science</li>
-          <li>Relevant coursework: Data Structures, Algorithms, Artificial Intelligence, Machine Learning, Computer & Operating Systems</li>
+          <li>
+            Relevant coursework: Data Structures, Algorithms, Artificial Intelligence, 
+            Machine Learning, Computer & Operating Systems
+          </li>
           <li>Cumulative GPA: 3.87</li>
         </ul>
       </div>
       <div class="timeline-item">
         <h3>University of Southern California</h3>
-        <div class="position">Bachelor of Science (BS), Applied and Computational Mathematics</div>
+        <div class="position">
+          Bachelor of Science (BS), Applied and Computational Mathematics
+        </div>
         <div class="date-location">August 2023 – May 2027</div>
         <ul>
           <li>Major in Applied and Computational Mathematics</li>
-          <li>Relevant coursework: Calculus, Linear Algebra, Probability and Statistics, Optimization, Mathematics of Machine Learning</li>
+          <li>
+            Relevant coursework: Calculus, Linear Algebra, Probability and Statistics, 
+            Optimization, Mathematics of Machine Learning
+          </li>
         </ul>
       </div>
       <div class="timeline-item">
@@ -249,8 +311,10 @@
     <h2>Experience</h2>
     <div class="timeline">
       <div class="timeline-item">
-        <h3>Algorithm Developer Intern, Department of Research and Innovation</h3>
-        <div class="position">Transwarp, Xuhui District, Shanghai, China | On-site</div>
+        <h3>Algorithm Developer Intern, Dept. of Research and Innovation</h3>
+        <div class="position">
+          Transwarp, Xuhui District, Shanghai, China | On-site
+        </div>
         <div class="date-location">June 2024 – August 2024</div>
         <ul>
           <li>
@@ -264,19 +328,21 @@
             high-quality factors
           </li>
           <li>
-            Completed implementation of code for more than 100 known high-frequency alpha factors, 
+            Completed code implementation for more than 100 known high-frequency alpha factors, 
             contributing to factor pool and evaluated performances of factors
           </li>
         </ul>
       </div>
       <div class="timeline-item">
-        <h3>Software Engineer Intern, Department of Research and Development</h3>
-        <div class="position">Kingdee Software, Qinhuai District, Nanjing, China | Remote</div>
+        <h3>Software Engineer Intern, Dept. of Research and Development</h3>
+        <div class="position">
+          Kingdee Software, Qinhuai District, Nanjing, China | Remote
+        </div>
         <div class="date-location">April 2024 – May 2024</div>
         <ul>
           <li>
             Optimized cloud environments for performance, security, and cost-efficiency 
-            by autoscaling and resource reallocation, improving overall efficiency by 30%
+            by autoscaling and resource reallocation, increasing overall efficiency by 30%
           </li>
           <li>
             Fine-tuned cloud-based ERP systems, enhancing digital management capabilities 
@@ -294,9 +360,14 @@
   <!-- KEY ACHIEVEMENTS SECTION -->
   <section id="achievements">
     <h2>Key Achievements</h2>
-    <ul style="margin-left: 1.5rem; list-style: disc;">
-      <li>Scholarship: Presidential Scholar (half-ride) at the University of Southern California, Academic Achievement Award for Fall 2024</li>
-      <li>Honors: Dean's Scholar, Dean's List Fall 2023, Dean's List Spring 2024, Dean's List Fall 2024</li>
+    <ul>
+      <li>
+        Scholarship: Presidential Scholar (half-ride) at the University of Southern California, 
+        Academic Achievement Award for Fall 2024
+      </li>
+      <li>
+        Honors: Dean's Scholar, Dean's List Fall 2023, Dean's List Spring 2024, Dean's List Fall 2024
+      </li>
     </ul>
   </section>
 
@@ -312,4 +383,3 @@
   </script>
 </body>
 </html>
-
